# statistics-canada

./: .actrc  .gitignore  .python-version  CHANGELOG.md  GEMINI.md  README.md  TEST_WORKFLOW.md  _version.py  build_info.py  build_script.py  final-test.md  minimal_test.py  package_info.py  pyproject.toml  requirements.dev.txt  requirements.tools.txt  requirements.txt  setup.py  test-api-workflow-final.md  test-fix-file.md  test_file_1758685143.txt  test_models.py
.github/: copilot-instructions.md
.github/prompts/: run_tests.prompt.md
.github/scripts/: README.md  check_package_changes.py  file-patterns.sh  test_changelog.sh  update_changelog.py  update_changelog.sh  update_release_changelog.py
.github/workflows/: dev-build.yml  dev-changelog-smart-v2.yml  dev-changelog-smart.yml.disabled  dev-changelog.yml  main-branch-protection.yml  pr-checks.yml  pr-checks.yml.disabled  pr-dev.yml  pr.yml  publish.yml  python-package.yml  python-package.yml.disabled  qa-qc-checks.yml  qaqc.yml  release-changelog.yml  release-pipeline.yml  release.yml  update-changelog.yml
docs/: README.md  abbreviation_system.md  abbreviations_qa.md  branch_protection_setup.md  changelog_pat_setup.md  coordinate_system.md  data_architecture.md  demographic_analysis.md  generic_changelog_workflow.md  geographic_system.md  github_app_setup.md  test_infrastructure_change.md
docs/charts/: README.md  _index.md  enhanced_release_pipeline.md  example_pr_workflow.yml  implementation_summary.md  mission_accomplished.md  workflow_diagram.md
docs/workflow/: pull-request.md
examples/: README.md  advanced_coordinates.py  basic_usage.py  client_overview.py  demographic_analysis.py  enhanced_usage.py  wds_geographic_discovery.py
statscan/: __init__.py  _version.py  census_data.py  data.py  data_response.py  dguid.py  mcp_server.py  url.py
statscan/enums/: dimension_columns.py  enhanced_stats_filter.py  expanded_enums.py  frequency.py  schema.py  stats_filter.py  vintage.py
statscan/sdmx/: base.py  meta.py  response.py
statscan/util/: get_data.py  log.py  pkg.py
statscan/wds/: __init__.py  client.py  coordinate.py  cube.py  cube_manager.py  datapoint.py  dimension.py  footnote.py  geographic.py  link.py  member.py  requests.py  series.py  vector.py
template/: _version.py
tests/: __init__.py  conftest.py  data_store.py  fixtures.py  mock_method.py  run_tests.py  test_api_integration.py  test_core.py  test_data.py  test_dimensions.py  test_enhanced_sdmx.py  test_enums.py  test_integration.py  test_saugeen_shores_population.py  test_sdmx_response.py
tests/data/: wds_codesets.json
tests/integration/: test_integration.py  test_performance.py  test_saugeen_shores_population.py
tests/sdmx/: __init__.py  test_end_user_functionality.py  test_network_fixtures.py
tests/tools/: __init__.py  test_abbreviation_opportunity_analysis.py  test_abbreviations_qa.py  test_enum_equivalence.py  test_interactive_abbreviation_system.py
tests/wds/: __init__.py  test_client.py  test_end_user_functionality.py  test_models.py  test_network_fixtures.py  test_requests.py
tools/: __init__.py  abbreviations.py  check_empty_files.py  enum_writer.py  generate_enums.py  interactive_abbreviation_manager.py  main.py  review_abbreviations.py  substitution.py  test.ipynb  unified_enum_processor.py  wds_code_enum_gen.py  wds_coordinate_discovery.py  wds_enum_gen.py  wds_productid_enum_gen.py  word_tracker.py  writer.py
unittests/: run_tests.py  test_core.py  test_data.py  test_enums.py  test_integration.py  test_package_info.py
workflows/: python-package.yml
(+83 files in other folders)
