[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "statistics-canada"
authors = [
    {name="Paul Bouillon", email="pbouill@gmail.com"},
]
description = "Python bindings for the Statistics Canada Web Data Service (WDS) API"
license = "GPL-3.0-or-later" 
license-files = ['LICENSE']  #, "LICENSE.*"]
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "python", 
    "statistics",
    "census",
    "canada",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dynamic = [
    "version", 
    "dependencies"
]

[project.urls]
"Homepage" = "https://github.com/pbouill/statistics-canada"
"Repository" = "https://github.com/pbouill/statistics-canada.git"
"Bug Tracker" = "https://github.com/pbouill/statistics-canada/issues"
"Changelog" = "https://github.com/pbouill/statistics-canada/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."] # Look for packages in the current directory
exclude = [
    ".*",
    "data*",
    "dist*",
    "docs*",
    "examples*",
    "scratch*",
    "tests*",
    "tools*"
]

[tool.setuptools.package-data]
"*" = ["*.html", "*.css", "*.ico", "*.js"]

[tool.setuptools.dynamic]
version = {attr = "_version.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
markers = [
    "dependency: tests that require network or external dependencies",
    "network: tests that make live network calls to generate fixtures",
    "mock: tests that use mocked responses instead of live API calls",
    "slow: tests that take a long time to run"
]
# Configure pytest-asyncio to use session-scoped event loops
# This allows session-scoped async fixtures to work properly
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

# Network tests are automatically prioritized by pytest_collection_modifyitems hook